fixed image covering navbar

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ button:focus {
     position: absolute;
     bottom: 0;
     right: 0;
-    margin-bottom: -18px;
+    margin-bottom: -52px;
     margin-right: 80px;
     width: 680px;
     height: auto;
